--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,1 @@
-{
-"scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-}
-}
+{"scripts":{"start":"node server.js","dev":"nodemon server.js"},"dependencies":{"bcryptjs":"^2.4.3","dotenv":"^16.4.5","jsonwebtoken":"^9.0.2"}}
