--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.0",
     "pg": "^8.12.0",
-    "sequelize": "^6.37.3"
+    "qrcode": "^1.5.3",
+    "sequelize": "^6.37.3",
+    "stripe": "^16.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
