--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-auth0": "^3.2.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.3.0",
