--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "mongoose": "^8.5.0",
     "pg": "^8.12.0",
     "qrcode": "^1.5.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-popup-menu": "^0.16.1",
+    "react-native-vector-icons": "^10.1.0",
     "sequelize": "^6.37.3",
     "stripe": "^16.2.0"
   },
